Fixing not vertical aligned post icon

--- a/src/component/atom/Post/Post.scss
+++ b/src/component/atom/Post/Post.scss
@@ -85,6 +85,7 @@
 
 .footer-icon {
     display: inline-block;
+    vertical-align: middle;
 }
 
 .anchor-icon {
